Fix flex-basis and width in userIcon and bio sections, add word-wrap to bio description

--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -116,7 +116,7 @@ img {
 	backface-visibility: hidden;
 }
 .userIcon {
-	/* flex-basis: 8rem; */
+	flex-basis: 8rem;
 	width: 8rem;
 	height: 8rem;
 	border-radius: 2rem;
@@ -126,15 +126,13 @@ img {
 	top: -25px;
 }
 .userIcon img {
-	/* width: 100%;
-	height: 100%; */
-	width: 8rem;
-	height: 8rem;
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 }
 .bio {
 	flex-basis: calc(100% - 8rem);
-	width: 100%;
+	width: 250px;
 	height: auto;
 	padding-left: 1.2rem;
 }
@@ -196,7 +194,7 @@ img {
 	margin-top: 15px;
 	letter-spacing: 0.15rem;
 }
-.bio .des {
+.bio .des1 {
 	color: #ccc;
 	font-family: "A P-OTF A1Gothic StdN";
 	font-size: 1.2rem;
@@ -205,6 +203,7 @@ img {
 	line-height: 160%;
 	margin-top: 5px;
 	letter-spacing: 0.15rem;
+	word-wrap: break-word;
 }
 
 .bioDesCard .title {
@@ -213,15 +212,17 @@ img {
 	font-size: 2rem;
 	font-style: normal;
 	font-weight: 600;
+	word-wrap: break-word;
 	line-height: 2.2rem;
 }
-.bioDesCard .des {
+.bioDesCard .des2 {
 	color: #ccc;
 	font-size: 1.2rem;
 	font-style: normal;
 	font-weight: 500;
 	line-height: 170%;
 	margin-top: 20px;
+	word-wrap: break-word;
 }
 .buttonBox {
 	width: 100%;
